Enable 2 item query
